# ubx_documented_example

./: .#README.org  README.md  README.org  example.usc  example_pkg.pkg  generate  run.sh  sourceme.sh
example/: CMakeLists.txt
example/cmake/: example-config.cmake.in
example/models/: example_pkg.pkg
example/modules/: bit_module.c  bit_module.h  sequence_module.c  sequence_module.h  toggle_module.c  toggle_module.h
example/src/: example_bit.c  example_bit.h  example_bit.usc  example_sequence.c  example_sequence.h  example_sequence.usc  example_toggle.c  example_toggle.h  example_toggle.usc
example/types/: example_types.c
models/: example_bit_iblock.blx  example_bit_iblock.lua  example_pkg.pkg  example_sequence_sblock.blx  example_sequence_sblock.lua  example_toggle_cblock.blx  example_toggle_cblock.lua
